Finally figured out how to fix the flex spacing

--- a/main.css
+++ b/main.css
@@ -1,7 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
 display: flex;
 flex-direction: column;
 min-width: 375px;
+height: 100vh;
+margin: 0;
 }
 
 header {
@@ -11,16 +19,16 @@ flex: 0 80px;
 
 
 main {
-flex: 1 calc(100vh - 110px);
+flex: 1 1 calc(100vh - 110px);
 display: flex;
 flex-direction: column;
 align-items: center;
 justify-content: space-around;
+padding: 1em;
 }
 
 footer {
 flex: 0 30px;
-/* background-color: rgb(172, 4, 4); */
 } 
 
 menu {
